zoc/src/parser_tests/snapshots/zoc__parser_tests__deb__deb_0.snap
---
source: src/parser_tests/deb.rs
expression: "&cst"
---
Deb(
    NumberLiteral {
        value: 0,
        span: (
            ByteIndex(
                0,
            ),
            ByteIndex(
                1,
            ),
        ),
    },
)
